test/valid/tcomp000_letOfLet/letOfLet.agu
-- Author: tcomp000, Vasco T. Vasconcelos

let main (_) : Unit -> Unit = 
  let x : Unit = 
   let x : Unit = 
    let x : Unit = 
     let x : Unit = 
      let x : Unit = 
       let x : Unit = 
        let x : Unit = 
         let x : Unit = 
          let x : Unit = 
           let x : Unit = 
            let x : Unit = 
             let x : Unit = 
              let x : Unit = 
               let x : Unit = 
                let x : Unit = 
                 let x : Unit = 
                  let x : Unit = 
                   let x : Unit = 
                    let x : Unit = 
                     let x : Unit = 
                      let x : Unit = 
                       let x : Unit = 
                        let x : Unit = 
                         let x : Unit = 
                          let x : Unit = 
                           let x : Unit = 
                            let x : Unit = 
                             let x : Unit = 
                              let x : Unit = 
                               let x : Unit = 
                                let x : Unit = 
                                 let x : Unit = 
                                  let x : Unit = 
                                   let x : Unit = 
                                    let x : Unit = 
                                     let x : Unit = 
                                      let x : Unit = 
                                       let x : Unit = 
                                        let x : Unit = 
                                         let x : Unit = 
                                          let x : Unit = 
                                           let x : Unit = 
                                            let x : Unit = 
                                             let x : Unit = 
                                              let x : Unit = 
                                               let x : Unit = 
                                                let x : Unit = 
                                                 let x : Unit = 
                                                  let x : Unit = 
                                                   let x : Unit = 
                                                    let x : Unit = 
                                                     let x : Unit = 
                                                      let x : Unit = 
                                                       let x : Unit = 
                                                        let x : Unit = 
                                                         let x : Unit = 
                                                          let x : Unit = 
                                                           let x : Unit = 
                                                            let x : Unit = 
                                                             let x : Unit = 
                                                              let x : Unit = 
                                                               let x : Unit = 
                                                                let x : Unit = 
                                                                 let x : Unit = 
                                                                  let x : Unit = 
                                                                   let x : Unit = 
                                                                    let x : Unit = 
                                                                     let x : Int = 5;
  print(x)                                                                     