test/invalid-semantic/tcomp000-while-plus-five/while-plus-five.agu
-- tcomp000, vasco t. vasconcelos

let _ : Int = (while false do 5) + 5